# vf

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yaml
src/: ufo.rs
src/ufo/: designspace.rs  fontinfo.rs  glyphs.rs  groups.rs  kerning.rs  layercontents.rs  lib.rs  metainfo.rs  utils.rs
src/ufo/fontinfo/: guidelines.rs  opentype.rs  postscript.rs  woff.rs
src/ufo/fontinfo/opentype/: gasp.rs  head.rs  hhea.rs  name.rs  os2.rs  vhea.rs
src/ufo/fontinfo/opentype/os2/: ibmfc.rs  panose.rs
src/ufo/glyphs/: contents.rs  glif.rs  layerinfo.rs
